test/parser/match/empty_args_error.myte
module test

fun main() {
  match () {
    | a -> a
  }
}